--- a/src/main/resources/templates/evento/eventoShow.html
+++ b/src/main/resources/templates/evento/eventoShow.html
@@ -10,11 +10,11 @@
 			<div class="col-xs-12">
 				<div class="x_panel">
 					<div class="x_title">
-						<h2 th:text="#{label.visualizzazione_evento(${eventoWrapper.proceduraFormativa}, ${eventoWrapper.evento.getCodiceIdentificativo()})}"></h2>
+						<h2 th:text="#{label.visualizzazione_evento(${eventoWrapperShow.proceduraFormativa}, ${eventoWrapperShow.evento.getCodiceIdentificativo()})}"></h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
-  								<a class="btn btn-primary" th:href="@{|/provider/${eventoWrapper.providerId}/evento/list|}" th:text="#{label.indietro}"></a>
-  								<a class="btn btn-primary" th:href="@{|/provider/${eventoWrapper.providerId}/evento/${eventoWrapper.evento.id}/pdf|}" th:text="#{label.esporta_pdf}"></a>
+  								<a class="btn btn-primary" th:href="@{|/provider/${eventoWrapperShow.providerId}/evento/list|}" th:text="#{label.indietro}"></a>
+  								<a class="btn btn-primary" th:href="@{|/provider/${eventoWrapperShow.providerId}/evento/${eventoWrapperShow.evento.id}/pdf|}" th:text="#{label.esporta_pdf}"></a>
 							</div>
 						</div>
 						<div class="clearfix"></div>
@@ -22,7 +22,7 @@
 
 					<th:block th:fragment="eventoShow">
 
-						<th:block th:switch="${eventoWrapper.proceduraFormativa}">
+						<th:block th:switch="${eventoWrapperShow.proceduraFormativa}">
 							<th:block th:case="${T(it.tredi.ecm.dao.enumlist.ProceduraFormativa).FAD}">
 								<th:block th:include="evento/eventoFADShow :: eventoFADShow"></th:block>
 							</th:block>
@@ -78,7 +78,7 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="attivitaRES">
 			<div id="attivitaRES">
-				<div th:id="${'attivitaRES-' + __${status.index}__}" class="col-xs-12" th:each="programmaGiornaliero , status : ${eventoWrapper.evento.programma}">
+				<div th:id="${'attivitaRES-' + __${status.index}__}" class="col-xs-12" th:each="programmaGiornaliero , status : ${eventoWrapperShow.evento.programma}">
 					<div class="item form-group">
 						<label class="control-label col-md-3 col-sm-3 col-xs-11">
 							<span th:text="#{label.programma_del}" class="text-uppercase">Programma del</span>
@@ -146,7 +146,7 @@
 									</tr>
 								</thead>
 								<tbody>
-									<tr th:attr="data-row-id=${__${status2.index}__}" th:each="attivita , status2 : ${eventoWrapper.evento.programma[__${status.index}__].programma}">
+									<tr th:attr="data-row-id=${__${status2.index}__}" th:each="attivita , status2 : ${eventoWrapperShow.evento.programma[__${status.index}__].programma}">
 										<td th:text="${attivita.orarioInizio}"></td>
 										<td th:text="${attivita.orarioFine}"></td>
 										<td th:text="${attivita.argomento}"></td>
@@ -171,9 +171,9 @@
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="attivitaFSC">
 			<div id="attivitaFSC">
-				<div th:id="${'attivitaFSC-' + __${status.index}__}" class="col-xs-12" th:each="faseCorrente , status : ${eventoWrapper.evento.fasiAzioniRuoli}"  th:with="fase=${eventoWrapper.evento.fasiAzioniRuoli[__${status.index}__].faseDiLavoro}">
+				<div th:id="${'attivitaFSC-' + __${status.index}__}" class="col-xs-12" th:each="faseCorrente , status : ${eventoWrapperShow.evento.fasiAzioniRuoli}"  th:with="fase=${eventoWrapperShow.evento.fasiAzioniRuoli[__${status.index}__].faseDiLavoro}">
 
-					<th:block th:if="${ (eventoWrapper.evento.tipologiaEventoFSC != T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO) or T(it.tredi.ecm.dao.enumlist.ProgettiDiMiglioramentoFasiDaInserireFSCEnum).faseAbilitata(eventoWrapper.evento.fasiDaInserire,fase)}">
+					<th:block th:if="${ (eventoWrapperShow.evento.tipologiaEventoFSC != T(it.tredi.ecm.dao.enumlist.TipologiaEventoFSCEnum).PROGETTI_DI_MIGLIORAMENTO) or T(it.tredi.ecm.dao.enumlist.ProgettiDiMiglioramentoFasiDaInserireFSCEnum).faseAbilitata(eventoWrapperShow.evento.fasiDaInserire,fase)}">
 
 						<div class="item form-group">
 							<th:block th:if="${fase != T(it.tredi.ecm.dao.enumlist.FaseDiLavoroFSCEnum).CAMPO_LIBERO}">
@@ -203,7 +203,7 @@
 										</tr>
 									</thead>
 									<tbody>
-										<tr th:attr="data-row-id=${__${status2.index}__}" th:each="attivita , status2 : ${eventoWrapper.evento.fasiAzioniRuoli[__${status.index}__].azioniRuoli}">
+										<tr th:attr="data-row-id=${__${status2.index}__}" th:each="attivita , status2 : ${eventoWrapperShow.evento.fasiAzioniRuoli[__${status.index}__].azioniRuoli}">
 											<td th:text="${attivita.azione}"></td>
 											<td th:text="${attivita.obiettivoFormativo?.nome}"></td>
 											<td th:text="${attivita.risultatiAttesi}"></td>
@@ -238,7 +238,7 @@
 
 	<th:block style="display:none">
 		<div class="col-xs-12" th:fragment="attivitaFAD">
-			<div id="attivitaFAD" th:if="${eventoWrapper.evento.programmaFAD != null}">
+			<div id="attivitaFAD" th:if="${eventoWrapperShow.evento.programmaFAD != null}">
 				<div class="col-xs-12">
 					<label th:text="#{label.dettaglio_attivita}">Dettaglio Attività</label>
 					<div data-programma-id="0">
@@ -254,7 +254,7 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr th:attr="data-row-id=${__${row.index}__}" th:each="attivita , row : ${eventoWrapper.evento.programmaFAD}">
+								<tr th:attr="data-row-id=${__${row.index}__}" th:each="attivita , row : ${eventoWrapperShow.evento.programmaFAD}">
 									<td th:text="${attivita.argomento}"></td>
 									<td>
 										<div th:text="${docente.anagrafica?.cognome}" th:each="docente, row : ${attivita.docenti}"></div>
