--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -39,13 +39,18 @@
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.accreditamentoId}" />
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.subset}" />
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.objRef}" />
+								<input type="hidden" th:field="${datiAccreditamentoWrapper.datiAccreditamento.id}" />
+								<input type="hidden" th:field="${datiAccreditamentoWrapper.sezione}" />
 							</th:block>
 						</th:block>
 
+						<!-- errore in caso di mancata motivazione nell'enableField -->
+						<h2 th:if="${errorMsg}" class="col-xs-12 alert alert-error with-margin-top text-center" th:text="#{__${errorMsg}__}"></h2>
+
 						<div th:classappend="${datiAccreditamentoWrapper.sezione == 1} ? 'show' : 'hide'">
 
-							<!-- info -->
-							<h2 th:if="${editabile and (datiAccreditamentoWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE or datiAccreditamentoWrapper.accreditamento.isVariazioneDati())}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
+						<!-- info -->
+						<h2 th:if="${editabile and (datiAccreditamentoWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE or datiAccreditamentoWrapper.accreditamento.isVariazioneDati())}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
 
 							<!-- TIPOLOGIA ACCREDITAMENTO -->
 							<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('datiAccreditamentoWrapper.datiAccreditamento.tipologiaAccreditamento')} ? 'bad'">
