--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -36,11 +36,15 @@
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.accreditamentoId}" />
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.subset}" />
 								<input type="hidden" th:field="${richiestaIntegrazioneWrapper.objRef}" />
+								<input type="hidden" th:field="${providerWrapper.provider.id}" />
 							</th:block>
 						</th:block>
 
 						<!-- info -->
 						<h2 th:if="${editabile and (providerWrapper.statoAccreditamento == T(it.tredi.ecm.dao.enumlist.AccreditamentoStatoEnum).INTEGRAZIONE or providerWrapper.accreditamento.isVariazioneDati())}" class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{label.info_applicazione_integrazione}"></h2>
+
+						<!-- errore in caso di mancata motivazione nell'enableField -->
+						<h2 th:if="${errorMsg}" class="col-xs-12 alert alert-error with-margin-top text-center" th:text="#{__${errorMsg}__}"></h2>
 
 						<!-- TIPO ORGANIZZATORE -->
 						<div th:class="${valutabile ? 'item validateAlert form-group' : 'item form-group'}" th:classappend="${#fields.hasErrors('providerWrapper.provider.tipoOrganizzatore')} ? 'bad'">
