MEV Canale Comunicazioni, task #10255

--- a/src/main/resources/templates/comunicazione/comunicazioneDashboard.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneDashboard.html
@@ -70,6 +70,16 @@
 									</div>
 								</div>
 							</div>
+							<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+								<div class="tile-stats clickable" onclick="goTo('comunicazione/nonRisposte/list')">
+									<div class="icon"><i class="fa fa-commenting"></i></div>
+									<div class="col-xs-10">
+					                	<div class="count" th:text="${numeroComunicazioniNonRisposte}"></div>
+					                	<h3 class="tile-h3" th:text="${numeroComunicazioniNonRisposte == 1} ? #{label.comunicazione} : #{label.comunicazioni}"></h3>
+					                	<p class="count-text" th:text="${numeroComunicazioniNonRisposte == 1} ? #{label.non_risposta} : #{label.non_risposte}"></p>
+									</div>
+								</div>
+							</div>
 
 						</div>
 					</div>
