--- a/src/main/resources/templates/comunicazione/comunicazioneNew.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneNew.html
@@ -6,6 +6,38 @@
 </head>
 <body>
 	<div layout:fragment="content" id="main-container" th:fragment="content">
+		<!-- finestra modale di lookup degli eventi -->
+		<div id="lookup-eventi-modal" class="modal fade modal-lookup-eventi" data-model-index="1" role="dialog">
+			<div class="modal-dialog modal-lg">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+						</button>
+						<h4 class="modal-title" id="myModalLabel1" th:text="#{label.seleziona_evento}">Cerca anagrafica</h4>
+					</div>
+					<div class="modal-body">
+						<table id="tabella-modale" class="datatable-responsive-search-evento table table-striped table-bordered dt-responsive nowrap" cellspacing="0" width="100%">
+							<thead>
+								<tr>
+									<th th:text="#{label.codice_identificativo}">Codice Identificativo</th>
+									<th th:text="#{label.titolo}">Titolo</th>
+									<th th:text="#{label.tipologia_formativa}">Tipologia Formativa</th>
+									<th th:text="#{label.id}" class="hidden">Id</th>
+									<th></th>
+								</tr>
+							</thead>
+							<tbody>
+								<!-- popolata con una request ajax -->
+							</tbody>
+						</table>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<div class="row">
 			<div class="col-xs-12">
 				<div class="x_panel">
@@ -37,10 +69,10 @@
 											<label class="control-label" th:text="#{label.from}"></label>
 										</div>
 										<div class="col-xs-10 col-sm-7 col-md-5">
-											<div class="fixed-value" th:unless="${comunicazioneWrapper.comunicazione.mittente.isSegreteria()}"
+											<div class="fixed-value" th:if="${!comunicazioneWrapper.comunicazione.mittente.isSegreteria() or #authentication.principal.account.isSegreteria()}"
 												th:text="${comunicazioneWrapper.comunicazione.mittente.getFullName()} + ' &lt;' + ${comunicazioneWrapper.comunicazione.mittente.email} + '&gt;'">
 											</div>
-											<div class="fixed-value" th:if="${comunicazioneWrapper.comunicazione.mittente.isSegreteria()}"
+											<div class="fixed-value" th:if="${comunicazioneWrapper.comunicazione.mittente.isSegreteria() and !#authentication.principal.account.isSegreteria()}"
 												th:text="#{label.segreteria_ecm} + ' &lt;' + #{label.segreteria_ecm_mail} + '&gt;' ">
 											</div>
 										</div>
@@ -183,7 +215,12 @@
 										</div>
 										<div class="col-xs-5 col-sm-3 col-md-2">
 											<div class="no-padding">
-												<input class="form-control" th:field="${comunicazioneWrapper.comunicazione.codiceEventoLink}" id="linkEvento" />
+												<div class="col-xs-9 no-padding">
+													<input class="form-control" th:field="${comunicazioneWrapper.comunicazione.codiceEventoLink}" id="linkEvento" />
+												</div>
+												<div class="col-xs-3">
+													<button type="button" th:onclick="|openLookupEventoByProviderId(${#authentication.principal.account.provider.id})|" th:if="${#authentication.principal.account.isProvider()}" class="btn btn-primary min-icon-width col-xs-1" th:title="#{label.cerca_evento}"><i class="fa fa-search"> </i></button>
+												</div>
 											</div>
 											<div th:if="${#fields.hasErrors('comunicazioneWrapper.comunicazione.codiceEventoLink')}" class="alert" th:errors="${comunicazioneWrapper.comunicazione.codiceEventoLink}"></div>
 										</div>
@@ -238,10 +275,15 @@
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
+				var queryNotDone = true;
 				var destinatariIds = [[${comunicazioneWrapper.comunicazione.destinatari}]];
 				var filtriProvider = {gruppo:"", tipo:""};
 				$(document).ready(function() {
 					$("#optgroup").multiselect({
+				        search: {
+				            left: '<input type="text" name="q" class="form-control" placeholder="Cerca..." />',
+				            right: '<input type="text" name="q" class="form-control" placeholder="Cerca..." />',
+				        },
 						keepRenderingSort: true,
 						ignoreDisabled: true
 					});
@@ -305,7 +347,8 @@
 						}
 					}
 
-					if([[${#fields.hasErrors('comunicazioneWrapper.comunicazione.codiceEventoLink')}]]) {
+					if([[${#fields.hasErrors('comunicazioneWrapper.comunicazione.codiceEventoLink')}]]
+							|| [[${comunicazioneWrapper.comunicazione.ambito == T(it.tredi.ecm.dao.enumlist.ComunicazioneAmbitoEnum).EVENTI}]]) {
 						$(".linkevento-container").show();
 					}
 				});
@@ -335,6 +378,7 @@
 					}
 					else {
 						$(".linkevento-container").slideUp("slow");
+						$("#linkEvento").val('');
 					}
 				}
 
@@ -466,6 +510,45 @@
 					$providers.each(function(index, provider) {
 						$(provider).show().prop("disabled", false).removeClass("hidden");
 					})
+				}
+
+				//lookup su eventi del provider (solo per provider)
+				function openLookupEventoByProviderId(providerId){
+					var urlGet = [[@{|/provider/|}]] + providerId + "/evento/listaEventiLookup";
+					if(queryNotDone) {
+						$('#tabella-modale').DataTable({
+							bInfo: false,
+							bPaginate: false,
+							scrollY: 300,
+							bScrollCollapse: true,
+						    scroller: true,
+						    ajax: {
+						        url: urlGet,
+						        dataSrc: ''
+						    },
+						    columns: [
+						    	{data: 'codiceIdentificativo'},
+						    	{data: 'titolo'},
+						    	{data: 'proceduraFormativa'},
+						    	{data: 'id'},
+						    	{render: function (data, type, full, meta) {
+						                    return '<button onclick="setLookupEvento(\''+ full.codiceIdentificativo + '\')" class="btn btn-primary">'+[[#{label.seleziona}]]+'</button>';
+				                 		}
+						    	}
+						    ],
+						    columnDefs: [
+						    	{targets: 3, sClass: "hidden", visible: false},
+						    	{targets: 4, orderable: false, width: "1%", sClass: "center"}
+						    ],
+						});
+						queryNotDone = false;
+					}
+					$("#lookup-eventi-modal").modal("show");
+				}
+
+				function setLookupEvento(idEvento) {
+					$("#lookup-eventi-modal").modal("hide");
+					$("#linkEvento").val(idEvento);
 				}
 
 			/*]]>*/
