--- a/src/main/resources/templates/fragments/templatePublic.html
+++ b/src/main/resources/templates/fragments/templatePublic.html
@@ -13,20 +13,20 @@
 				<div class="row">
 					<div class="col-md-12 col-sm-12 col-sx-12">
 							<div class="x_title">
-								<a th:href="@{/main}">
+								<a th:href="@{/home}">
 									<img class="logo-64" th:src="@{/images/logo.jpg}" />
 									<h3 style="display: inline;" th:text="#{app.title}">app.label</h3>
-								</a>	
+								</a>
 							</div>
 					</div>
 				</div>
-				
+
 				<div class="clearfix"></div>
-				
+
 				<!-- PAGE CONTENT -->
 				<div layout:fragment="content"></div>
 				<!--  /PAGE CONTENT -->
-				
+
 				<footer>
 					<div class="text-center">
 						<div class="media-body media-middle">
@@ -40,7 +40,7 @@
 					</div>
 				</footer>
 			</div>
-			
+
 			<!-- FOOTER -->
 			<!--/*/ <th:block th:include="fragments/footer :: footer"></th:block> /*/-->
 			<!--  /FOOTER -->
