--- a/src/main/resources/templates/comunicazione/comunicazioneList.html
+++ b/src/main/resources/templates/comunicazione/comunicazioneList.html
@@ -65,6 +65,8 @@
 			/*<![CDATA[*/
 
 			     $(document).ready(function() {
+
+			    	$.fn.dataTable.moment('DD/MM/YYYY - HH:mm');
 					$('#datatable-comunicazione').DataTable({
 						"bFilter" : false,
 						"bInfo" : false,
