Vaschetta Provider non hanno inserito la relazione annuale alla scedenza

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -244,6 +244,16 @@
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+						<div class="tile-stats clickable" onclick="goTo('provider/providerNotRelazioneAnnualeRegistrata/list')">
+							<div class="icon"><i class="fa fa-file-text"></i></div>
+							<div class="col-xs-10">
+			                	<div class="count" th:text="${homeWrapper.providerNotRelazioneAnnualeRegistrata}"></div>
+			                	<h3 class="tile-h3" th:text="#{label.provider}"></h3>
+			                	<p class="count-text" th:text="${homeWrapper.providerNotRelazioneAnnualeRegistrata == 1} ? #{label.non_ha_inserito_relazione_annuale} :  #{label.non_hanno_inserito_relazione_annuale}"></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
 						<div class="tile-stats clickable" onclick="goTo('referee/list')">
 							<div class="icon"><i class="fa fa-eye-slash"></i></div>
 							<div class="col-xs-10">
